manifests/kuard-pod-helth.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers: # define per container
    - image: gcr.io/kuar-demo/kuard-amd64:blue
      name: kuard
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5 # seconds after all the containers in the pod are created        
        timeoutSeconds: 1 # respond within the 1-second timeout
        periodSeconds: 10 # call the probe every 10 seconds
        failureThreshold: 3 # more than three consecutive probes fail, the container will fail and restart
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
