manifests/kuard-pod-reslim.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuard
spec:
  containers:
    - image: gcr.io/kuar-demo/kuard-amd64:blue
      name: kuard
      # cpu millicores or millicpu's = 1 physical CPU core, or 1 virtual core = {0.5, 500m}
      # mebibyte (MiB) =
      resources:
        requests: # minimum amount of a resource required to run the application
          cpu: "500m"
          memory: "128Mi" # {134.21 MB}
        limits: # maximum amount of a resource that an application can consume
          cpu: "1000m"
          memory: "256Mi" # {268.43 MB}
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
